opam-version: "2.0"
name: "markers"
version: "1.0.0"
maintainer: "Curtis Wilkinson"
authors: ["Curtis Wilkinson"]
homepage: ""
bug-reports: ""
dev-repo: ""
license: ["MIT"]
tags: []
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "reason" {>= "2.0.0"} {build}
]
